--- a/src/static/css/iconfont.css
+++ b/src/static/css/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'iconfont'; /* Project id 4755028 */
   src:
-    url('../font/iconfont.woff2?t=1737968255127') format('woff2'),
-    url('../font/iconfont.woff?t=1737968255127') format('woff'),
-    url('../font/iconfont.ttf?t=1737968255127') format('truetype');
+    url('../font/iconfont.woff2?t=1738161250398') format('woff2'),
+    url('../font/iconfont.woff?t=1738161250398') format('woff'),
+    url('../font/iconfont.ttf?t=1738161250398') format('truetype');
 }
 
 .iconfont {
@@ -12,6 +12,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-post-management:before {
+  content: '\e6f9';
+}
+
+.icon-file-management:before {
+  content: '\e747';
 }
 
 .icon-setting:before {
