--- a/src/static/css/iconfont.css
+++ b/src/static/css/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'iconfont'; /* Project id 4755028 */
   src:
-    url('../font/iconfont.woff2?t=1738321559321') format('woff2'),
-    url('../font/iconfont.woff?t=1738321559321') format('woff'),
-    url('../font/iconfont.ttf?t=1738321559321') format('truetype');
+    url('../font/iconfont.woff2?t=1738648394516') format('woff2'),
+    url('../font/iconfont.woff?t=1738648394516') format('woff'),
+    url('../font/iconfont.ttf?t=1738648394516') format('truetype');
 }
 
 .iconfont {
@@ -12,6 +12,38 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-copy:before {
+  content: '\e676';
+}
+
+.icon-unlocked:before {
+  content: '\e601';
+}
+
+.icon-delete:before {
+  content: '\e649';
+}
+
+.icon-locked:before {
+  content: '\e60f';
+}
+
+.icon-share:before {
+  content: '\e6ee';
+}
+
+.icon-rename:before {
+  content: '\e6a3';
+}
+
+.icon-move:before {
+  content: '\e6cf';
+}
+
+.icon-download:before {
+  content: '\e615';
 }
 
 .icon-time:before {
